@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.3)
 #project(project0)
 
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-add_definitions(-std=c11)
+add_definitions(-std=gnu11)
 set(CMAKE_LEGACY_CYGWIN_WIN32 0)
 
 set(SOURCE_FILES )
